--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
 <!-- remove this comment and place your html here -->
+<!DOCTYPE html>
+
+<html>
+
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <center>
+      <h1>Which Incredible are you?</h1>
+      </center>
+    </header>
+    <main>
+      <div id="quiz-wrapper">
+        <!-- <button type="button"id="try-again">Try Again</button> -->
+        <tryagainbutton class="button"><span>Try Again </span></tryagainbutton>
+
+        <div class="question">
+          <center>
+
+            <div class="container">
+
+
+
+              <button class="btn">Yoga</button>
+
+            </div>
+
+          <h1>What do you like to do?</h1>
+         <!-- <input type="radio" name="activites" id="yoga">
+          <label for="choice-id">Yoga</label> -->
+            <img src="yoga" alt="Yoga">
+
+          <input type="radio" name="activites" id="running">
+          <label for="choice-id">Running</label>
+          <input type="radio" name="activites" id="pilates">
+          <label for="choice-id">Pilates</label>
+          <input type="radio" name="activites" id="weight lifting">
+          <label for="choice-id">Weight Lifting</label>
+          </center>
+          </div>
+
+        <div class="question">
+          <center>
+          <h1>How would you describe yourself?</h1>
+          <input type="radio" name="yourself" id="responsible">
+          <label for="choice-id">Responsible</label>
+          <input type="radio" name="yourself" id="adventourous">
+          <label for="choice-id">Adventourous</label>
+          <input type="radio" name="yourself" id="leadedr">
+          <label for="choice-id">Leader</label>
+          <input type="radio" name="yourself" id="shy">
+          <label for="choice-id">Shy</label>
+          </center>
+        </div>
+
+        <div class="question">
+          <center>
+          <h1>Whats your favorite animal?</h1>
+          <input type="radio" name="animal" id="chameleon">
+          <label for="choice-id">Chameleon</label>
+          <input type="radio" name="animal" id="cheetah">
+          <label for="choice-id">Cheetah</label>
+          <input type="radio" name="animal" id="snake">
+          <label for="choice-id">Snake</label>
+          <input type="radio" name="animal" id="lion">
+          <label for="choice-id">Lion</label>
+          </center>
+        </div>
+      </div>
+      <center>
+      <!-- <button type="button" autofocus id="form-submit">Submit</button> -->
+      <button class="button"><span>Submit </span></button>
+      <div id="result"></div>
+    </center>
+    </main>
+  </body>
+</html>
